--- a/style.css
+++ b/style.css
@@ -628,3 +628,58 @@ html {
 }
 /* End of Contact */
 
+/* Footer */
+.footer {
+    width: 100%;
+    height: 7rem;
+    background-color: #202020;
+    border-top: .1rem solid #3e3e41;
+    position: relative;
+}
+
+.brand-footer {
+    position: absolute;
+    top: 3.5rem;
+    left: 20%;
+}
+
+.brand-footer .logo1 {
+    width: 3rem;
+    height: 3rem;
+    border: .2rem solid #dba81b;
+}
+
+.brand-footer .logo2 {
+    width: 2.5rem;
+    height: 2.5rem;
+    background-color: #202020;
+    top: .7rem;
+    left: .7rem;
+}
+
+.brand-footer .logo3 {
+    width: 2.5rem;
+    height: 2.5rem;
+    border: .2rem solid #dba81b;
+    background-color: #202020;
+    top: 1.3rem;
+    left: 1.3rem;
+}
+
+.brand-footer span {
+    font-size: 2rem;
+    margin-top: .5rem;
+}
+
+.copyright {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20%;
+    font-size: 1.6rem;
+    color: #ccc;
+}
+/* End of Footer */
+/* End of Container */
+
+
